--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   image_picker: ^0.6.7+12
   path_provider: ^1.6.22
   path: ^1.7.0
-  sqflite: ^1.3.2+1
+  sqflite: ^1.1.5
 
 
   # The following adds the Cupertino Icons font to your application.
