Rendering a Dynamic Map (via Google Maps) - flutter version up

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutter_picture_map_storing">
+    package="com.example.flutter_picture_map_storing2">
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
@@ -7,8 +7,10 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="flutter_picture_map_storing"
+        android:label="flutter_picture_map_storing2"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyCQWMRmGvAM_QLE52veK21AONzVd3WqotQ"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
