--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_picture_map_storing
+name: flutter_picture_map_storing2
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -27,13 +27,14 @@ dependencies:
   image_picker: ^0.6.7+12
   path_provider: ^1.6.22
   path: ^1.7.0
-  sqflite: ^1.1.5
+  sqflite: ^1.3.2+1
   location: ^3.0.2
+  google_maps_flutter: ^1.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.0
 
 dev_dependencies:
   flutter_test:
