--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   sqflite: ^1.3.2+1
   location: ^3.0.2
   google_maps_flutter: ^1.0.5
+  http: ^0.12.2
 
 
   # The following adds the Cupertino Icons font to your application.
